# log-classification

./: .gitignore  counts.json  function_counts.json  lstm_1x50_drop0.0_rec0.0_encbertencoder_100logs_win20_lr0.001_bs32_ep1000_val_loss_20250604_142155.h5  lstm_results.json  lstm_results_prettier.json  model_results.json  model_results_prettier.json  profile_output.prof  pyproject.toml  r.txt  requirements.txt  setup.py  test-summary.txt  transformer_2x128_drop0.1_encbertencoder_100logs_win20_lr0.001_bs32_ep1000_val_loss_20250616_113908.h5
evaluations/: test-summary.txt
notebooks/: lstm_1x50_drop0.0_rec0.0_encbertencoder_100logs_win20_lr0.001_bs32_ep1000_val_loss_20250604_151042.h5  lstm_1x50_drop0.0_rec0.0_enctextvectorizationencoder_100logs_win20_lr0.001_bs32_ep1000_val_loss_20250604_162219.h5  lstm_x100_1000.h5  lstm_x50_1000.h5  parse.ipynb  preprocess.ipynb  test_models.ipynb  test_models_augmented.ipynb  train.ipynb  train_lstm.ipynb  train_lstm_semi_supervised.ipynb  train_model.ipynb  train_transformer.ipynb  train_transformer_semi_supervised.ipynb  transformer-1.h5
preprocessors/: [0HiWjxscscueRy5h][20250813_141635]preprocessor_test.json  [Etxk7-u9DWzAAcFS][20250829_112751]train_model_pp.json  [GcNrgh5bKr-WgtAo][20250821_114941]train_model_pp.json  [KXMvIvlCKWt7zaBr][20250813_144101]preprocessor_test.json  [RU8chxeujRY9v4lb][20250813_131611]preprocessor_test.json  [ZczZQ5G4kYpQztwL][20250818_111505]train_lstm_pp.json  [chbt2s4V18eW9fsI][20250923_103831]test_pp.json  [pKwZvHIj-reyaosu][20250812_161155]preprocessor_test.json  (+2 more)
src/: a.py  classes.py  classifier.py  (+33 more)
(+38 files in other folders)
