[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-classification"         # pip name can have a dash
version = "0.1.0"
description = "Log classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy==2.1.3",
  "tensorflow==2.19.0",
  "keras==3.10.0", 
  "matplotlib==3.10.3", 
  "rich==14.0.0",
  "regex==2024.11.6",
  "scikit-learn==1.6.1",
  "torch==2.7.0",
  "tqdm==4.67.1",
  "transformers==4.52.4",
  "typing_extensions==4.13.2",
  "seaborn==0.13.2"
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "log_classification", 
  "log_classification.*", 
  "classification_report",
  "classification_report.*"
  ]
exclude = ["log_classification.scripts*"]   # <-- scripts won't be installed

